--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>My Tamagotchi</title>
 </head>
 <body>
+    <h1>Enter your Tamagotchi's name</h1>
+    <label>name:</label>
+    <input type="text">
+    <input type="submit" value="Submit">
     <script src="js/app.js"></script>
 </body>
 </html>
