--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
     <input type="text">
     <input type="submit" value="Submit">
     <script src="js/app.js"></script>
+    <div>
+        <ul>
+            <li>Hunger: 0</li>
+            <li>Sleepiness: 0</li>
+            <li>Boredom: 0</li>
+            <li>Age: 0</li>
+        </ul>
+        <img src="file:///Users/owner/Downloads/Mashimaro-removebg-preview.png" alt="Mashimaro">
+    </div>
+
 </body>
+<footer>
+    <input type="submit" value="Feed">
+    <input type="submit" value="Turn Off Lights">
+    <input type="submit" value="Play">
+</footer>
 </html>
