--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <h1>Enter your Tamagotchi's name</h1>
     <label>name:</label>
     <input type="text">
-    <input type="submit" value="Submit">
-    <script src="js/app.js"></script>
+    <button>Submit</button>
+    
     <div>
         <ul>
-            <li>Hunger: 0</li>
-            <li>Sleepiness: 0</li>
-            <li>Boredom: 0</li>
-            <li>Age: 0</li>
+            <li id="hunger">Hunger: 0</li>
+            <li id="sleepiness">Sleepiness: 0</li>
+            <li id="boredom">Boredom: 0</li>
+            <li id="age">Age: 0</li>
         </ul>
         <img src="file:///Users/owner/Downloads/Mashimaro-removebg-preview.png" alt="Mashimaro">
     </div>
-
+<script src="js/app.js"></script>
 </body>
 <footer>
     <input type="submit" value="Feed">
