buttons are now working to lower levels of Tamagotchi

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </ul>
         <img src="file:///Users/owner/Downloads/Mashimaro-removebg-preview.png" alt="Mashimaro">
     </div>
-<script src="js/app.js"></script>
 </body>
 <footer>
-    <input type="submit" value="Feed">
-    <input type="submit" value="Turn Off Lights">
-    <input type="submit" value="Play">
+    <button id="feed">Feed</button>
+    <button id="turn-off-lights">Turn Off Lights</button>
+    <button id="play">Play</button>
+<script src="js/app.js"></script>
 </footer>
 </html>
