--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <li id="boredom">Boredom: 0</li>
             <li id="age">Age: 0</li>
         </ul>
-        <img src="file:///Users/owner/Downloads/Mashimaro-removebg-preview.png" alt="Mashimaro">
+        <img src="/Users/owner/bromeliad/projects/Tamagotchi-mini-project/Images/Mashimaro.png" alt="Mashimaro" id="Mashimaro">
+        <img src="/Users/owner/bromeliad/projects/Tamagotchi-mini-project/Images/Game-Frame.png" alt="Game-Frame" id="Frame">
+        <img src="/Users/owner/bromeliad/projects/Tamagotchi-mini-project/Images/Pink Clouds.png" alt="Pink Clouds" id="Clouds">
     </div>
 </body>
 <footer>
