--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
    <link rel="stylesheet" href="css/style.css">
+   <link rel="images" href="Images/Dead Mashimaro.png">
     <title>My Tamagotchi</title>
 </head>
 <body>
