added name feature so name displays on screen when submit button is pressed

--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
    <link rel="stylesheet" href="css/style.css">
-   <link rel="images" href="Images/Dead Mashimaro.png">
     <title>My Tamagotchi</title>
 </head>
 <body>
     <h1>Enter your Tamagotchi's name</h1>
     <label>name:</label>
-    <input type="text">
-    <button>Submit</button>
+    <input type="text" id="Tamagotchi-name" value="name">
+    <button id='submit'>Submit</button>
     
     <div>
         <ul>
