age images change, death image changes as well. moon appears when sleep button is toggled. More animations placed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <img src="Images/Mashimaro.png" alt="Mashimaro" id="Mashimaro">
         <img src="Images/Game-Frame.png" alt="Game-Frame" id="Frame">
         <img src="Images/Pink Clouds.png" alt="Pink Clouds" id="Clouds">
+        <img src="Images/Pink Clouds.png" alt="Pink Clouds" id="Clouds2">
     </div>
 </body>
 <footer>
